Fixing overflow body

--- a/Webclient/src/default.scss
+++ b/Webclient/src/default.scss
@@ -12,7 +12,8 @@ body {
     margin: 0;
     background: $theme_dominant_color;
     height: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     position: relative;
 }
 
